--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8cccef">  <td>18/08/28 09:36:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateAccount.tearUp()[pri:0, instance:com.guru.login.CreateAccount@5f150435]">&gt;&gt;tearUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1164175787</td>   <td></td> </tr>
-<tr bgcolor="8cccef">  <td>18/08/28 09:36:33</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateAccount.TC01_CreateAccount()[pri:0, instance:com.guru.login.CreateAccount@5f150435]">TC01_CreateAccount</td> 
-  <td>main@1164175787</td>   <td></td> </tr>
+<tr bgcolor="61e8a0">  <td>18/09/10 15:00:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BankGuru.beforeClass()[pri:0, instance:com.guru.login.BankGuru@7cdbc5d3]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2088051243</td>   <td></td> </tr>
+<tr bgcolor="61e8a0">  <td>18/09/10 15:01:06</td>   <td>13476</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankGuru.TC01_NameCannotEmpty()[pri:0, instance:com.guru.login.BankGuru@7cdbc5d3]">TC01_NameCannotEmpty</td> 
+  <td>main@2088051243</td>   <td></td> </tr>
+<tr bgcolor="61e8a0">  <td>18/09/10 15:01:12</td>   <td>18693</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BankGuru.afterClass()[pri:0, instance:com.guru.login.BankGuru@7cdbc5d3]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2088051243</td>   <td></td> </tr>
 </table>
