--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,21 +4,21 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.guru.login.CreateAccount</td>
+<td>com.guru.login.BankGuru</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC01_CreateAccount</td>
+<td>TC01_NameCannotEmpty</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tearUp</td>
+<td>beforeClass</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
@@ -31,6 +31,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tearDown</td>
+<td>afterClass</td>
 <td>&nbsp;</td></tr>
 </table>
