--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="61e8a0">  <td>18/09/10 15:23:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankGuru.TC01_NameCannotEmpty()[pri:0, instance:com.guru.login.BankGuru@7cdbc5d3]">TC01_NameCannotEmpty</td> 
+<tr bgcolor="61e8a0">  <td>18/09/11 03:09:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankGuru.TC01_NameCannotEmpty()[pri:0, instance:com.guru.login.BankGuru@7cdbc5d3]">TC01_NameCannotEmpty</td> 
   <td>main@2088051243</td>   <td></td> </tr>
-<tr bgcolor="61e8a0">  <td>18/09/10 15:23:12</td>   <td>5678</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BankGuru.afterClass()[pri:0, instance:com.guru.login.BankGuru@7cdbc5d3]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2088051243</td>   <td></td> </tr>
-<tr bgcolor="61e8a0">  <td>18/09/10 15:22:52</td>   <td>-14000</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BankGuru.beforeClass()[pri:0, instance:com.guru.login.BankGuru@7cdbc5d3]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="61e8a0">  <td>18/09/10 15:11:27</td>   <td>-43093275</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BankGuru.beforeClass()[pri:0, instance:com.guru.login.BankGuru@7cdbc5d3]">&gt;&gt;beforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2088051243</td>   <td></td> </tr>
 </table>
